Detectors section in english

--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 
-\title{Implémentation du jeu Hex via la Programmation Orientée Objet et stratégies de décision en C++}
+\title{Robust Image Matching with Local Features}
 
 \author{
     \IEEEauthorblockN{1\textsuperscript{st} Santiago Florido Gomez}
